--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
   --ff-primary-100: "Poppins", sans-serif;
 
+  --fw-feather: 300;
   --fw-light: 400;
   --fw-regular: 500;
   --fw-semi-bold: 600;
@@ -93,5 +94,36 @@ select {
 }
 
 * {
+  font-size: inherit;
   font-family: var(--ff-primary-100);
+}
+
+body {
+  margin-top: 2em;
+}
+
+header h1 {
+  font-size: var(--fs-700);
+  font-weight: var(--fw-semi-bold);
+  text-align: center;
+  padding-bottom: 0.5em;
+  color: var(--clr-neutral-100);
+}
+
+header h2 {
+  font-size: var(--fs-600);
+  font-weight: var(--fw-light);
+  text-align: center;
+  color: var(--clr-neutral-100);
+}
+
+header p {
+  font-size: var(--fs-500);
+  font-weight: var(--fw-feather);
+  text-align: center;
+  color: var(--clr-neutral-200);
+}
+
+header {
+  margin-bottom: 4em;
 }
