--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ article {
   /* height: min(222px, 250px); */
   margin: 0 auto;
   border-radius: 8px;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   position: relative;
 }
 
@@ -163,4 +163,27 @@ article img {
   position: absolute;
   right: 25px;
   bottom: 25px;
+}
+
+.card-1 {
+  border-top: 5px solid var(--clr-primary-200);
+}
+
+.card-2 {
+  border-top: 5px solid var(--clr-primary-100);
+}
+
+.card-3 {
+  border-top: 5px solid var(--clr-primary-300);
+}
+
+.card-4 {
+  border-top: 5px solid var(--clr-primary-400);
+}
+
+.card-1,
+.card-2,
+.card-3,
+.card-4 {
+  box-shadow: ;
 }
