--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ select {
 body {
   margin: 2em 0 2em 0;
   background-color: var(--clr-neutral-400);
+  padding: 1em;
 }
 
 header h1 {
@@ -136,7 +137,7 @@ article {
   background-color: var(--clr-neutral-300);
   padding: 1.5em;
   width: min(100%, 350px);
-  height: 250px;
+  height: 300px;
   /* height: min(222px, 250px); */
   margin: 0 auto;
   border-radius: 8px;
@@ -181,9 +182,56 @@ article img {
   border-top: 5px solid var(--clr-primary-400);
 }
 
-.card-1,
+/* .card-1,
 .card-2,
 .card-3,
 .card-4 {
   box-shadow: ;
+} */
+
+@media (min-width: 55.5rem) {
+  main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 800px;
+    margin: 0 auto;
+  }
+
+  .card-1 {
+    grid-template-areas: 1;
+  }
+
+  .card-2 {
+    grid-template-areas: 2;
+  }
+}
+
+@media (min-width: 75rem) {
+  main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 1150px;
+    margin: 0 auto;
+    place-items: center;
+  }
+
+  .card-1 {
+    grid-column-start: 1;
+    grid-column-end: 1;
+  }
+
+  .card-2 {
+    grid-column-start: 2;
+    grid-column-end: 2;
+  }
+
+  .card-3 {
+    grid-column-start: 2;
+    grid-column-end: 2;
+  }
+
+  .card-4 {
+    grid-column-start: 3;
+    grid-column-end: 3;
+  }
 }
